--- a/overlay/frameworks/base/core/res/res/values/config.xml
+++ b/overlay/frameworks/base/core/res/res/values/config.xml
@@ -669,6 +669,10 @@
      <bool name="config_suspendWhenScreenOffDueToProximity">true</bool>
      <integer name="config_lightSensorWarmupTime">250</integer>
 
+    <!-- Delay that allows some content to arrive at the display before switching
+         from DOZE to ON, in millis. -->
+    <integer name="config_wakeUpDelayDoze">32</integer>
+
     <!-- The bounding path of the cutout region of the main built-in display.1
          Must either be empty if there is no cutout region, or a string that is parsable by
          {@link android.util.PathParser}.
